tests/paczka1/fuzzy1/23256747.err
Error in line 1: QFp A588 68,2
Error in line 16: 0Ad5FR5MJqO A209 25,3
Error in line 19: 0Ad5FR5MJqO A541 74,7
Error in line 29: QFp A209 9,1
